# twobitreader

./: .gitignore  .pre-commit-config.yaml  .travis.yaml  .travis.yml  AGENTS.md  CHANGELOG  COPYRIGHT  MANIFEST  Makefile  README  README.md  pyproject.toml  setup.cfg  setup.py  test_package.py
.github/workflows/: build-test.yml  ci.yml  docs.yml  lint.yml  release.yml
doc/: .readthedocs.yaml  Makefile  conf.py  download.rst  index.rst  make.bat  twobitreader.rst
src/: __init__.py  __main__.py  download.py
src/test/: __init__.py
tests/: test_main.py
twobitreader/: __init__.py  download.py
twobitreader/test/: __init__.py
