[project]
name = "twobitreader"
version = "3.1.8"
description = "A fast python package for reading .2bit files (used by the UCSC genome browser)"
readme = "README.md"
authors = [
    { name = "Benjamin Schiller", email = "ben.j.schiller@gmail.com" }
]
keywords = ["genomics", "ucsc", "2bit", "bioinformatics"]
dependencies = [
    "setuptools>=80",
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
license = "Artistic-2.0"
license-files = ["LICENSE.txt", "COPYRIGHT"]

[project.urls]
Homepage = "https://github.com/benjschiller/twobitreader"
Repository = "https://github.com/benjschiller/twobitreader"

[project.optional-dependencies]
# Install with: pip install .[docs]
docs = [
  "sphinx>=7.3",
  "furo>=2024.1.29",
  "myst-parser>=2.0",
  "sphinx-autodoc-typehints>=2.1.0",
  "sphinx-copybutton>=0.5.2",
]

[tool.setuptools.packages.find]
include = ["twobitreader", "twobitreader.*"]

[tool.setuptools.package-data]
twobitreader = ["tests/test.2bit"]

[build-system]
requires = [
    "setuptools>=80",
    "setuptools-scm>=8.0.0",
]
build-backend = "setuptools.build_meta"

# Code quality tool configurations
[tool.black]
line-length = 127
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs"
]
